--- a/pom.xml
+++ b/pom.xml
@@ -81,10 +81,11 @@
 
 
 
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.39</version>
+            <version>5.1.49</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -131,10 +132,10 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
-                <configuration>
-                    <mainClass>com.hgc.school.SchoolApplication</mainClass>
-                    <skip>true</skip>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <mainClass>com.hgc.school.SchoolApplication</mainClass>-->
+<!--                    <skip>true</skip>-->
+<!--                </configuration>-->
                 <executions>
                     <execution>
                         <id>repackage</id>
