--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,18 @@
 <!--        </dependency>-->
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.github.rholder</groupId>
+            <artifactId>guava-retrying</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
             <version>7.17.3</version>
@@ -103,6 +115,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
